--- a/index.html
+++ b/index.html
@@ -118,9 +118,10 @@
        
         <div class="row">
           <div class="col-sm-6">
-            <div class="card">
+            <div class="card wilbo">
               <img
               src="./Assets/img/wilbo.png"
+              class="wilboimg"
               alt="home page of wilbo"
             >
               <div class="card-body">
@@ -142,6 +143,7 @@
             <div class="card pawme">
               <img
               src="./Assets/img/pawme-form.png"
+              class = 'pawmeimg'
               alt="submition form from Pawme website"
             >
               <div class="card-body">
